Bug 576606 - [OS/2] Fix registration follow-up to bug568691 r=dragtext